Fixed bug #32427 (Interfaces are not allowed 'static' access modifier).